fix visible empty room time if day week === 0

--- a/src/components/TableRoomReserve/tableroomreserve.css
+++ b/src/components/TableRoomReserve/tableroomreserve.css
@@ -32,3 +32,7 @@
   
     min-width: 800px;
   }
+
+  .room-time-empty {
+    min-width: 100px;
+  }
